fix: stop code clipping

--- a/app/component/map/map.scss
+++ b/app/component/map/map.scss
@@ -473,7 +473,7 @@ div.origin-popup {
 
   .origin-popup-name {
     @include font-book;
-    height: 1.4em;
+    height: 1.5em;
     width: 200px;
     text-transform: none;
     color: $black;
